# thicc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  demo.c  package-lock.json  package.json  test.c  thicc.h  thicc.pc.in
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang-linux.yml  clang-macos.yml  codeql.yml  commitlint.yml  doxygen.yml  gcc-linux.yml  msvc-windows.yml  test.yml  tests.yml
conversions/: thicc_as_array.c  thicc_as_array.h  thicc_as_boolean.c  thicc_as_boolean.h  thicc_as_character.c  thicc_as_character.h  thicc_as_double.c  thicc_as_double.h  thicc_as_float.c  thicc_as_float.h  thicc_as_function.c  thicc_as_function.h  thicc_as_integer.c  thicc_as_integer.h  thicc_as_long.c  thicc_as_long.h  thicc_as_long_double.c  thicc_as_long_double.h  thicc_as_object.c  thicc_as_object.h  thicc_as_short.c  thicc_as_short.h  thicc_as_signed_character.c  thicc_as_signed_character.h  thicc_as_string.c  thicc_as_string.h  thicc_as_subroutine.c  thicc_as_subroutine.h  thicc_as_unsigned_character.c  thicc_as_unsigned_character.h  thicc_as_unsigned_integer.c  thicc_as_unsigned_integer.h  thicc_as_unsigned_long.c  thicc_as_unsigned_long.h  thicc_as_unsigned_short.c  thicc_as_unsigned_short.h
conversions/c99/: thicc_c99_as_array.c  thicc_c99_as_array.h  thicc_c99_as_boolean.c  thicc_c99_as_boolean.h  thicc_c99_as_character.c  thicc_c99_as_character.h  thicc_c99_as_double.c  thicc_c99_as_double.h  thicc_c99_as_double_complex.c  thicc_c99_as_double_complex.h  thicc_c99_as_float.c  thicc_c99_as_float.h  thicc_c99_as_float_complex.c  thicc_c99_as_float_complex.h  thicc_c99_as_function.c  thicc_c99_as_function.h  thicc_c99_as_integer.c  thicc_c99_as_integer.h  thicc_c99_as_long.c  thicc_c99_as_long.h  thicc_c99_as_long_double.c  thicc_c99_as_long_double.h  thicc_c99_as_long_double_complex.c  thicc_c99_as_long_double_complex.h  thicc_c99_as_long_long.c  thicc_c99_as_long_long.h  thicc_c99_as_object.c  thicc_c99_as_object.h  thicc_c99_as_short.c  thicc_c99_as_short.h  thicc_c99_as_signed_character.c  thicc_c99_as_signed_character.h  thicc_c99_as_string.c  thicc_c99_as_string.h  thicc_c99_as_subroutine.c  thicc_c99_as_subroutine.h  thicc_c99_as_unsigned_character.c  thicc_c99_as_unsigned_character.h  thicc_c99_as_unsigned_integer.c  thicc_c99_as_unsigned_integer.h  (+6 more)
core/: thicc_enum_rank.h  thicc_interface.c  thicc_interface.h  thicc_memory.c  thicc_memory.h  thicc_struct_behaviour.c  thicc_struct_behaviour.h  thicc_struct_let.c  thicc_struct_let.h  thicc_struct_object.c  thicc_struct_object.h  thicc_typedef.h  thicc_union_value.c  thicc_union_value.h
core/c99/: thicc_c99_interface.c  thicc_c99_interface.h  thicc_c99_struct_behaviour.c  thicc_c99_struct_behaviour.h  thicc_c99_struct_let.c  thicc_c99_struct_let.h
cpp/: CMakeLists.txt  README.md  demo.cpp
cpp/include/: thicc_cpp.hpp  thicc_cpp_prelude.hpp
docs/: thicc
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  dynsections.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  index.html  navtree.js  navtreedata.js  navtreeindex0.js  resize.js
fortran/: CMakeLists.txt  README.md  demo.f03  demo.f90
fortran/include/: thicc_fortran.f03  thicc_fortran_prelude.h  thicc_opaque.h
fortran/src/: thicc_boilerplate.F03  thicc_fortran.F03  thicc_fortran.F90  thicc_fortran_prelude.h  thicc_opaque.c
include/: thicc.h  thicc_enum_rank.h  thicc_interface.h  thicc_prelude.h  thicc_struct_array.h  thicc_struct_behaviour.h  thicc_struct_complex.h  thicc_struct_string.h  thicc_struct_var.h  thicc_union_value.h
objc/: CMakeLists.txt  README.md  demo.m
objc/include/: thicc_objc.h
objc/src/: thicc_objc.m
operations/: thicc_bit_and.c  thicc_bit_and.h  thicc_bit_complement.c  thicc_bit_complement.h  thicc_bit_not.c  thicc_bit_not.h  thicc_bit_or.c  thicc_bit_or.h  thicc_bit_xor.c  thicc_bit_xor.h  thicc_comparison.c  thicc_comparison.h  thicc_decrement.c  thicc_decrement.h  thicc_difference.c  thicc_difference.h  thicc_increment.c  thicc_increment.h  thicc_index_of.c  thicc_index_of.h  thicc_indirection.c  thicc_indirection.h  thicc_logarithm.c  thicc_logarithm.h  thicc_modulo.c  thicc_modulo.h  thicc_negative.c  thicc_negative.h  thicc_positive.c  thicc_positive.h  thicc_power.c  thicc_power.h  thicc_product.c  thicc_product.h  thicc_quotient.c  thicc_quotient.h  thicc_root.c  thicc_root.h  thicc_sum.c  thicc_sum.h
operations/c99/: thicc_c99_bit_and.c  thicc_c99_bit_and.h  thicc_c99_bit_complement.c  thicc_c99_bit_complement.h  thicc_c99_bit_not.c  thicc_c99_bit_not.h  thicc_c99_bit_or.c  thicc_c99_bit_or.h  thicc_c99_bit_xor.c  thicc_c99_bit_xor.h  thicc_c99_comparison.c  thicc_c99_comparison.h  thicc_c99_decrement.c  thicc_c99_decrement.h  thicc_c99_difference.c  thicc_c99_difference.h  thicc_c99_increment.c  thicc_c99_increment.h  thicc_c99_index_of.c  thicc_c99_index_of.h  thicc_c99_indirection.c  thicc_c99_indirection.h  thicc_c99_logarithm.c  thicc_c99_logarithm.h  thicc_c99_modulo.c  thicc_c99_modulo.h  thicc_c99_negative.c  thicc_c99_negative.h  thicc_c99_positive.c  thicc_c99_positive.h  thicc_c99_power.c  thicc_c99_power.h  thicc_c99_product.c  thicc_c99_product.h  thicc_c99_quotient.c  thicc_c99_quotient.h  thicc_c99_sum.c  (+3 more)
test/: test.c  test.h  test_array.c  test_boolean.c  test_character.c  test_complex.c  test_function.c  test_integer.c  test_natural.c  test_object.c  test_real.c  test_string.c
utility/: thicc_array.c  thicc_array.h  thicc_character.c  thicc_character.h  thicc_comparison.c  thicc_comparison.h  thicc_complex.c  thicc_complex.h  thicc_float.c  thicc_float.h  thicc_function.c  thicc_function.h  thicc_math.c  thicc_math.h  thicc_math_typedef.h  thicc_object.c  thicc_object.h  thicc_rank.c  thicc_rank.h  thicc_string.c  thicc_string.h  thicc_subroutine.c  thicc_subroutine.h
(+273 files in other folders)
